RESOLVED FIXED183550
Fix the internal iOS build after r229512
https://bugs.webkit.org/show_bug.cgi?id=183550
Summary Fix the internal iOS build after r229512
Wenson Hsieh
Reported 2018-03-11 17:11:39 PDT
Internal iOS bots are failing after <https://trac.webkit.org/changeset/229512/webkit>: OpenSource/Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:33:9: error: non-portable path to file '"WKFullScreenViewController.h"'; specified path differs in case from file name on disk [-Werror,-Wnonportable-include-path] OpenSource/Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:771:52: error: null passed to a callee that requires a non-null argument [-Werror,-Wnonnull]
Attachments
Patch (2.24 KB, patch)
2018-03-11 17:16 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-03-11 17:16:12 PDT
WebKit Commit Bot
Comment 2 2018-03-11 20:38:26 PDT
Comment on attachment 335556 [details] Patch Clearing flags on attachment: 335556 Committed r229521: <https://trac.webkit.org/changeset/229521>
WebKit Commit Bot
Comment 3 2018-03-11 20:38:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-03-12 17:24:59 PDT
Note You need to log in before you can comment on or make changes to this bug.