Fix the internal iOS build after r229512 https://bugs.webkit.org/show_bug.cgi?id=183550

Reviewed by Zalan Bujtas.

Fixes a typo in a header import, as well as a nullability error. `SecTrustEvaluate()` takes in a nonnull outparam,
which was removed in r229512; this adds the outparam back, but does not consult its value when setting the
`infoDictionary`.

* UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(-[WKFullScreenWindowController _EVOrganizationName]):


Canonical link: https://commits.webkit.org/199220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229521 268f45cc-cd09-0410-ab3c-d52691b4dbfc